--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="css/aos.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
   </head>
   <body id="top">
     <header>
@@ -25,7 +26,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
+                <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li> -->
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -48,7 +49,26 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container">
+            <!-- <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook">
+              <i class="fa fa-facebook"></i>
+            </a> -->
+            <a class="btn btn-default btn-round btn-lg btn-icon" target="_blank" href="https://twitter.com/rajwhitehat" rel="tooltip" title="Follow me on Twitter">
+              <i class="fa fa-twitter"></i>
+            </a> 
+            <a class="btn btn-default btn-round btn-lg btn-icon"  target="_blank" href="https://www.linkedin.com/in/rajwhitehat"  rel="tooltip" title="Follow me on LinkedIn">
+              <i class="fa fa-linkedin"></i>
+            </a> 
+            <!-- <a class="btn btn-default btn-round btn-lg btn-icon">
+              <i class="fa fa-linkedin fa-2x " aria-hidden="true"></i> -->
+            <!-- </a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+">
+              <i class="fa fa-google-plus"></i>
+            </a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram">
+              <i class="fa fa-instagram"></i>
+            </a> -->
+          </div>
         </div>
       </div>
     </div>
@@ -68,10 +88,10 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">Basic Information</div>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">27</div>
-            </div>
+              <div id="ageDiv" class="col-sm-8"></div>
+            </div> -->
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
               <div class="col-sm-8">rajwhitehat@gmail.com</div>
@@ -101,14 +121,14 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Java Script</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Java</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">MongoDB</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
@@ -124,9 +144,9 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">SCSS</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">NodeJs</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
@@ -142,7 +162,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Angular</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div><span class="progress-value">85%</span>
               </div>
             </div>
           </div>
@@ -151,7 +171,7 @@
     </div>
   </div>
 </div>
-<!-- <div class="section" id="portfolio">
+<div class="section" id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
@@ -159,8 +179,8 @@
         <div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
+            <!-- <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li> -->
           </ul>
         </div>
       </div>
@@ -170,33 +190,33 @@
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://www.mesf.gg/">
+                  <figure class="cc-effect"><img src="images/mesf.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Recent Project</div>
+                      <div class="h4">Dynasty Project</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://www.pace-consortium.org/project">
+                  <figure class="cc-effect"><img src="images/ukacpace.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Startup Project</div>
+                      <div class="h4">PACE project</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://lafiya.app/">
+                  <figure class="cc-effect"><img src="images/lafiya.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Food Order Project</div>
+                      <div class="h4">Lafiya Telehealth System</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://trustlaw-prod.appspot.com">
+                  <figure class="cc-effect"><img src="images/trustlaw.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Web Advertising Project</div>
+                      <div class="h4">TrustLaw</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
@@ -204,7 +224,7 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="graphic-design" role="tabpanel">
+      <!-- <div class="tab-pane" id="graphic-design" role="tabpanel">
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
@@ -241,8 +261,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="tab-pane" id="Photography" role="tabpanel">
+      </div> -->
+      <!-- <div class="tab-pane" id="Photography" role="tabpanel">
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
@@ -279,10 +299,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
-</div> -->
+</div>
 <!-- <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
@@ -447,7 +467,7 @@
       <div class="cc-contact">
         <div class="row">
           <div class="col-md-9">
-            <div class="card mb-0" data-aos="zoom-in">
+            <div class="card mb-0 contactForm" data-aos="zoom-in">
               <div class="h4 text-center title">Contact Me</div>
               <div class="row">
                 <div class="col-md-6">
@@ -510,8 +530,37 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <div class="container text-center">
+        <a class="cc-facebook btn btn-link" target="_blank" href="https://www.linkedin.com/in/rajwhitehat">
+          <i class="fa fa-linkedin fa-2x " aria-hidden="true"></i>
+        </a>
+        <!-- <a class="cc-facebook btn btn-link" href="#">
+          <i class="fa fa-facebook fa-2x " aria-hidden="true"></i>
+        </a> -->
+        <a class="cc-twitter btn btn-link " target="_blank" href="https://twitter.com/rajwhitehat">
+          <i class="fa fa-twitter fa-2x " aria-hidden="true"></i>
+        </a>
+        <!--
+        <a class="cc-google-plus btn btn-link" href="#">
+          <i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
+        </a>
+        <a class="cc-instagram btn btn-link" href="#">
+          <i class="fa fa-instagram fa-2x " aria-hidden="true"></i>
+        </a> -->
+      </div>
     </footer>
+    <!-- <script>
+      function _calculateAge(dobString) {
+    var birthday = new Date(dobString);
+    var ageDifMs = Date.now() - birthday.getTime();
+    var ageDate = new Date(ageDifMs); 
+    var age = Math.abs(ageDate.getUTCFullYear() - 1970);
+    var ageDiv = document.getElementById("ageDiv");
+    ageDiv.innerHTML = age;
+}
+
+_calculateAge("1992-07-09");
+    </script> -->
     <script src="js/core/jquery.3.2.1.min.js"></script>
     <script src="js/core/popper.min.js"></script>
     <script src="js/core/bootstrap.min.js"></script>
