--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Software Developer</title>
-    <meta name="description" content="Sofware Developer,worked on Angular, NodeJS, MongoDB, ExpressJS, Spring Boot, MySQL, JPA, Jenkins, AWS etc"/>
+    <meta name="description" content="Freelance Sofware Developer, MEAN Stack Developer from India"/>
+    <meta name="keywords" content="Angular, NodeJS, MongoDB, ExpressJS, Spring Boot, JavaScript, HTML, MySQL, JPA, Jenkins, AWS S3,  AWS Lambda, AWS API Gateway, Nginx, Aure Devops pipeline, Firebase"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css" rel="stylesheet">
